[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "mprofile"
version = "0.0.16"
description = "A low-overhead sampling memory profiler for Python 3"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["profiling", "performance"]
authors = [{ name = "Timothy Palpant", email = "tim@palpant.us"}]
maintainers = [{ name = "Artem Chopik", email = "artikchopik@gmail.com" }]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Tracker" = "https://github.com/timpalpant/mprofile/issues"
"Source" = "https://github.com/timpalpant/mprofile"

[tool.setuptools.packages.find]
include = ["mprofile"]


